InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/Retry_Transaction__c.object-meta.xml
<CustomObject>
    <label>Retry Transaction</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Retry Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retry Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>