InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <inlineHelpText>Enter the Endpoint.</inlineHelpText>
    <length>50</length>
    <type>Text</type>
</CustomField>