InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <inlineHelpText>Provide the Error Message details.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>