InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <inlineHelpText>Provide the Payload details.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>