InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <inlineHelpText>Enter the Related Record Id.</inlineHelpText>
    <length>18</length>
    <type>Text</type>
</CustomField>