InsureFlow360/force-app/main/default/objects/Retry_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry Scheduled</fullName>
            </value>
            <value>
                <fullName>Max Retry Reached</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Dead Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>